[package]
name = "untitled"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.15", features = ["blocking"] }
byteorder = "1.5.0"
indicatif = "0.17.11"
lazy_static = "1.5.0"
memchr = "2.7.4"
pnet = "0.35.0"
rand = "0.9.0"
regex = "1.11.1"
rocksdb = "0.23.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["std"] }
tokio = "1.44.2"
craftping = "0.7.0"
sha256 = "1.6.0"
rayon = "1.10.0"
futures = "0.3.31"
